--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <html>
 
 <head>
-	<!-- CSS -->
 	<link rel="stylesheet" href="index.css">
-	<!-- Font Awesome CDN -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<header>
-		<h1>Twimba</h1>
+		<div class="header-inner">
+			<img src="./images/pumpkin.png" class="pumpkin-img">
+			<div>
+				<h2>Pumpkin's Purrfect...</h2>
+				<h1>Meme Picker</h1>
+			</div>
+		</div>
 	</header>
 	<main>
-		<div class="tweet-input-area">
-			<img src="images/scrimbalogo.png" class="profile-pic">
-			<textarea placeholder="What's happening?" id="tweet-input"></textarea>
-		</div>
-		<button id="tweet-btn">Tweet</button>
-		<div class="feed" id="feed">
-			<!-- Tweets here!! -->
+		<h3>Select Your Current Emotion</h3>
+		<div class="controls-container">
+			<div class="emotion-radios" id="emotion-radios"></div>
+			<div class="gifs-check">
+				<label for="gifs-only-option" class="gifs-check-label">Animated GIFs only</label>
+				<input type="checkbox" id="gifs-only-option">
+			</div>
+			<button class="get-image-btn" id="get-image-btn">Get Image</button>
 		</div>
 	</main>
+		<div class="meme-modal" id="meme-modal">
+			<button class="meme-modal-close-btn" id="meme-modal-close-btn">X</button>
+			<div id="meme-modal-inner"></div>
+		</div>
 	<script src="index.js" type="module"></script>
 </body>
 
